--- a/checkout.html
+++ b/checkout.html
@@ -10,35 +10,50 @@
   <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="site-topbar">
+    <div class="wrap">
+      <a href="index.html" class="site-logo">LHMap 小店</a>
+      <div class="topbar-right">
+        <div class="topbar-search">
+          <input type="text" placeholder="搜索商品" />
+          <button type="button" class="btn-search" onclick="location.href='products.html'">搜索</button>
+        </div>
+        <a href="cart.html" class="topbar-cart">
+          购物车
+          <span class="badge js-cart-count">0</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <header class="site-header">
     <div class="wrap">
-      <h1 class="site-title"><a href="index.html">LHMap 小店</a></h1>
       <nav class="site-nav">
         <a href="index.html">首页</a>
-        <a href="products.html">商品</a>
-        <a href="cart.html">购物车 <span class="badge js-cart-count">0</span></a>
-        <a href="about.html">关于</a>
+        <a href="products.html">全部商品</a>
+        <a href="cart.html">购物车</a>
+        <a href="about.html">关于我们</a>
       </nav>
     </div>
   </header>
 
   <main class="main wrap">
-    <h2 class="page-title">填写订单</h2>
+    <span class="section-title">填写订单</span>
     <div id="checkoutEmpty" style="display: none;">
       <p class="empty">购物车是空的，请先 <a href="products.html">添加商品</a> 或 <a href="cart.html">查看购物车</a>。</p>
     </div>
     <div id="checkoutForm" class="split" style="display: none;">
       <div class="card">
-        <h3 style="margin: 0 0 1rem;">收货信息</h3>
-        <div class="field" style="margin-bottom: 1rem;">
+        <h3 style="margin: 0 0 16px; font-size: 16px;">收货信息</h3>
+        <div class="field" style="margin-bottom: 16px;">
           <label>姓名</label>
           <input type="text" id="name" class="input" placeholder="收货人姓名" required>
         </div>
-        <div class="field" style="margin-bottom: 1rem;">
+        <div class="field" style="margin-bottom: 16px;">
           <label>电话</label>
           <input type="tel" id="phone" class="input" placeholder="手机号" required>
         </div>
-        <div class="field" style="margin-bottom: 1rem;">
+        <div class="field" style="margin-bottom: 16px;">
           <label>地址</label>
           <textarea id="address" class="input" rows="3" placeholder="省市区 + 详细地址" required></textarea>
         </div>
@@ -49,8 +64,8 @@
       </div>
       <div>
         <div class="card" id="orderSummary"></div>
-        <p class="hint" style="margin-top: 0.75rem;">本站为静态演示，提交后会将订单信息复制到剪贴板，你可通过微信/邮件等方式发给我们完成下单。</p>
-        <button type="button" class="btn btn-primary" id="btnSubmit" style="margin-top: 1rem;">提交订单（复制信息）</button>
+        <p class="hint" style="margin-top: 12px;">本站为静态演示，提交后会将订单信息复制到剪贴板，你可通过微信/邮件等方式发给我们完成下单。</p>
+        <button type="button" class="btn btn-primary" id="btnSubmit" style="margin-top: 16px;">提交订单（复制信息）</button>
       </div>
     </div>
   </main>
@@ -87,7 +102,7 @@
         totalMoney += p.price * qty;
         lines.push(p.name + ' x' + qty + ' ¥' + (p.price * qty));
       });
-      summaryEl.innerHTML = '<h3 style="margin: 0 0 0.75rem;">订单摘要</h3><div class="totals"><div class="row">共 ' + totalQty + ' 件</div><div class="row">合计 <strong>¥' + totalMoney + '</strong></div></div>';
+      summaryEl.innerHTML = '<h3 style="margin: 0 0 12px; font-size: 16px;">订单摘要</h3><div class="totals"><div class="row">共 ' + totalQty + ' 件</div><div class="row">合计 <strong>¥' + totalMoney + '</strong></div></div>';
       btnSubmit.onclick = function () {
         var name = document.getElementById('name').value.trim();
         var phone = document.getElementById('phone').value.trim();
