--- a/index.html
+++ b/index.html
@@ -10,31 +10,52 @@
   <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- 淘宝式顶栏：橙底 + logo + 搜索 + 购物车 -->
+  <div class="site-topbar">
+    <div class="wrap">
+      <a href="index.html" class="site-logo">LHMap 小店</a>
+      <div class="topbar-right">
+        <div class="topbar-search">
+          <input type="text" placeholder="搜索商品" id="topSearch" />
+          <button type="button" class="btn-search" onclick="location.href='products.html'">搜索</button>
+        </div>
+        <a href="cart.html" class="topbar-cart">
+          购物车
+          <span class="badge js-cart-count">0</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- 主导航：白底 -->
   <header class="site-header">
     <div class="wrap">
-      <h1 class="site-title"><a href="index.html">LHMap 小店</a></h1>
       <nav class="site-nav">
         <a href="index.html" aria-current="page">首页</a>
-        <a href="products.html">商品</a>
-        <a href="cart.html">购物车 <span class="badge js-cart-count">0</span></a>
-        <a href="about.html">关于</a>
+        <a href="products.html">全部商品</a>
+        <a href="cart.html">购物车</a>
+        <a href="about.html">关于我们</a>
       </nav>
     </div>
   </header>
 
   <main class="main wrap">
+    <!-- 首屏：文案 + 横幅 -->
     <section class="hero">
-      <div>
-        <h2>欢迎来到 LHMap 小店</h2>
-        <p>精选好物，静候挑选。静态卖货站，托管于 GitHub Pages。</p>
-        <div class="cta">
-          <a href="products.html" class="btn btn-primary">去选商品</a>
-          <a href="cart.html" class="btn">查看购物车</a>
+      <div class="hero-inner">
+        <div>
+          <h2>欢迎来到 LHMap 小店</h2>
+          <p>精选好物，静候挑选。静态卖货站，托管于 GitHub Pages。</p>
+          <div class="cta">
+            <a href="products.html" class="btn btn-primary">去选商品</a>
+            <a href="cart.html" class="btn">查看购物车</a>
+          </div>
         </div>
+        <div class="hero-banner">精选推荐</div>
       </div>
     </section>
 
-    <h3 class="page-title">精选推荐</h3>
+    <span class="section-title">精选推荐</span>
     <div class="products-grid" id="featuredProducts"></div>
   </main>
 
@@ -55,14 +76,11 @@
         var card = document.createElement('div');
         card.className = 'product-card';
         card.innerHTML =
-          '<div class="thumb"></div>' +
+          '<a href="product.html?id=' + p.id + '" class="thumb"></a>' +
           '<div class="body">' +
             '<a href="product.html?id=' + p.id + '" class="name">' + p.name + '</a>' +
-            '<p class="desc">' + p.desc + '</p>' +
-            '<div class="price-row">' +
-              '<span class="price">¥' + p.price + '</span>' +
-              '<a href="product.html?id=' + p.id + '" class="btn btn-primary">查看</a>' +
-            '</div>' +
+            '<span class="price">¥' + p.price + '</span>' +
+            '<a href="product.html?id=' + p.id + '" class="btn-add">查看</a>' +
           '</div>';
         grid.appendChild(card);
       });
