--- a/product.html
+++ b/product.html
@@ -10,14 +10,29 @@
   <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="site-topbar">
+    <div class="wrap">
+      <a href="index.html" class="site-logo">LHMap 小店</a>
+      <div class="topbar-right">
+        <div class="topbar-search">
+          <input type="text" placeholder="搜索商品" />
+          <button type="button" class="btn-search" onclick="location.href='products.html'">搜索</button>
+        </div>
+        <a href="cart.html" class="topbar-cart">
+          购物车
+          <span class="badge js-cart-count">0</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <header class="site-header">
     <div class="wrap">
-      <h1 class="site-title"><a href="index.html">LHMap 小店</a></h1>
       <nav class="site-nav">
         <a href="index.html">首页</a>
-        <a href="products.html">商品</a>
-        <a href="cart.html">购物车 <span class="badge js-cart-count">0</span></a>
-        <a href="about.html">关于</a>
+        <a href="products.html">全部商品</a>
+        <a href="cart.html">购物车</a>
+        <a href="about.html">关于我们</a>
       </nav>
     </div>
   </header>
@@ -48,18 +63,18 @@
       }
       el.innerHTML =
         '<article class="card" style="max-width: 640px;">' +
-          '<div class="thumb" style="aspect-ratio:16/10; border-radius: var(--radius); margin-bottom: 1rem;"></div>' +
+          '<div class="thumb" style="aspect-ratio:1; border-radius: 4px; margin-bottom: 16px; background: #fafafa;"></div>' +
           '<header class="article-header">' +
             '<h2 class="title">' + p.name + '</h2>' +
-            '<p class="meta">' + p.category + ' · ¥' + p.price + '</p>' +
+            '<p class="meta">' + p.category + '</p>' +
           '</header>' +
           '<div class="product-body">' +
             '<p>' + p.desc + '</p>' +
-            '<div class="price-row" style="margin-top: 1rem;">' +
+            '<div class="price-row" style="margin-top: 16px; display: flex; align-items: center; gap: 16px; flex-wrap: wrap;">' +
               '<span class="price">¥' + p.price + '</span>' +
               '<div class="qty">' +
-                '数量 <input type="number" id="qty" min="1" value="1" class="input" style="width: 4rem;">' +
-                '<button type="button" class="btn btn-primary" id="btnAdd">加入购物车</button>' +
+                '数量 <input type="number" id="qty" min="1" value="1" class="input" style="width: 64px;">' +
+                '<button type="button" class="btn btn-primary" id="btnAdd" style="background: #ff6700; border-color: #ff6700;">加入购物车</button>' +
               '</div>' +
             '</div>' +
           '</div>' +
