--- a/cart.html
+++ b/cart.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>购物车 - LHMap 小店</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <title>购物车 - 于洋 小店</title>
   <link rel="stylesheet" href="css/blog.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 <body>
   <div class="site-topbar">
     <div class="wrap">
-      <a href="index.html" class="site-logo">LHMap 小店</a>
+      <a href="index.html" class="site-logo">于洋 小店</a>
       <div class="topbar-right">
         <div class="topbar-search">
           <input type="text" placeholder="搜索商品" />
@@ -49,7 +49,7 @@
 
   <footer class="site-footer">
     <div class="wrap">
-      <p>© 2025 LHMap 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
+      <p>© 2025 于洋 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
     </div>
   </footer>
 
