--- a/checkout.html
+++ b/checkout.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>结算 - LHMap 小店</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <title>结算 - 于洋 小店</title>
   <link rel="stylesheet" href="css/blog.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 <body>
   <div class="site-topbar">
     <div class="wrap">
-      <a href="index.html" class="site-logo">LHMap 小店</a>
+      <a href="index.html" class="site-logo">于洋 小店</a>
       <div class="topbar-right">
         <div class="topbar-search">
           <input type="text" placeholder="搜索商品" />
@@ -72,7 +72,7 @@
 
   <footer class="site-footer">
     <div class="wrap">
-      <p>© 2025 LHMap 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
+      <p>© 2025 于洋 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
     </div>
   </footer>
 
@@ -112,7 +112,7 @@
           alert('请填写姓名、电话和地址');
           return;
         }
-        var text = '【LHMap 小店 订单】\n\n收货人：' + name + '\n电话：' + phone + '\n地址：' + address + (note ? '\n备注：' + note : '') + '\n\n' + lines.join('\n') + '\n\n合计：¥' + totalMoney;
+        var text = '【于洋 小店 订单】\n\n收货人：' + name + '\n电话：' + phone + '\n地址：' + address + (note ? '\n备注：' + note : '') + '\n\n' + lines.join('\n') + '\n\n合计：¥' + totalMoney;
         if (navigator.clipboard && navigator.clipboard.writeText) {
           navigator.clipboard.writeText(text).then(function () {
             alert('订单信息已复制到剪贴板，请通过微信/邮件发给我们。感谢购买！');
