--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>首页 - LHMap 小店</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <title>首页 - 于洋 小店</title>
   <link rel="stylesheet" href="css/blog.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
   <!-- 淘宝式顶栏：橙底 + logo + 搜索 + 购物车 -->
   <div class="site-topbar">
     <div class="wrap">
-      <a href="index.html" class="site-logo">LHMap 小店</a>
+      <a href="index.html" class="site-logo">于洋 小店</a>
       <div class="topbar-right">
         <div class="topbar-search">
           <input type="text" placeholder="搜索商品" id="topSearch" />
@@ -44,7 +44,7 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <h2>欢迎来到 LHMap 小店</h2>
+          <h2>欢迎来到 于洋 小店</h2>
           <p>精选好物，静候挑选。静态卖货站，托管于 GitHub Pages。</p>
           <div class="cta">
             <a href="products.html" class="btn btn-primary">去选商品</a>
@@ -61,7 +61,7 @@
 
   <footer class="site-footer">
     <div class="wrap">
-      <p>© 2025 LHMap 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
+      <p>© 2025 于洋 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
     </div>
   </footer>
 
