--- a/about.html
+++ b/about.html
@@ -3,51 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>关于 - 于洋 小店</title>
+  <title>关于 - 于洋小店</title>
   <link rel="stylesheet" href="css/blog.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="site-topbar">
-    <div class="wrap">
-      <a href="index.html" class="site-logo">于洋 小店</a>
-      <div class="topbar-right">
-        <div class="topbar-search">
-          <input type="text" placeholder="搜索商品" />
-          <button type="button" class="btn-search" onclick="location.href='products.html'">搜索</button>
-        </div>
-        <a href="cart.html" class="topbar-cart">
-          购物车
-          <span class="badge js-cart-count">0</span>
-        </a>
+  <div class="tb-top-util">
+    <div class="tb-wrap">
+      <span class="tb-welcome">欢迎来到于洋小店</span>
+      <div class="tb-util-links">
+        <a href="index.html">首页</a>
+        <a href="products.html">全部商品</a>
+        <a href="cart.html">购物车</a>
+        <a href="about.html">关于我们</a>
       </div>
     </div>
   </div>
 
-  <header class="site-header">
-    <div class="wrap">
-      <nav class="site-nav">
-        <a href="index.html">首页</a>
-        <a href="products.html">全部商品</a>
-        <a href="cart.html">购物车</a>
-        <a href="about.html" aria-current="page">关于我们</a>
-      </nav>
+  <header class="tb-header">
+    <div class="tb-wrap tb-header-inner">
+      <a href="index.html" class="tb-logo">于洋小店</a>
+      <div class="tb-search">
+        <input type="text" placeholder="搜索商品" />
+        <button type="button" class="tb-search-btn" onclick="location.href='products.html'">搜索</button>
+      </div>
+      <a href="cart.html" class="tb-cart">
+        购物车
+        <span class="tb-cart-badge js-cart-count">0</span>
+      </a>
     </div>
   </header>
 
-  <main class="main wrap">
-    <span class="section-title">关于我们</span>
-    <div class="about-body">
-      <p>于洋 小店是一个依赖 GitHub Pages 的静态卖货网站，纯 HTML/CSS/JS，无后端。购物车数据保存在浏览器本地，结算时可将订单信息复制后通过微信或邮件发给我们。</p>
-      <p>如需联系：请通过仓库 <a href="https://github.com/FightingLH/LHMap">GitHub</a> 或您自行在页面上补充的联系方式与我们沟通。</p>
+  <nav class="tb-nav">
+    <div class="tb-wrap">
+      <a href="index.html" class="tb-nav-item">首页</a>
+      <a href="products.html" class="tb-nav-item">全部商品</a>
+      <a href="cart.html" class="tb-nav-item">购物车</a>
+      <a href="about.html" class="tb-nav-item" aria-current="page">关于我们</a>
     </div>
+  </nav>
+
+  <main class="tb-main">
+    <section class="tb-content">
+      <div class="tb-wrap">
+        <h3 class="tb-section-title">关于我们</h3>
+        <div class="about-body">
+          <p>于洋小店是一个依赖 GitHub Pages 的静态卖货网站，纯 HTML/CSS/JS，无后端。购物车数据保存在浏览器本地，结算时可将订单信息复制后通过微信或邮件发给我们。</p>
+          <p>如需联系：请通过仓库 <a href="https://github.com/FightingLH/LHMap">GitHub</a> 或您自行在页面上补充的联系方式与我们沟通。</p>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <p>© 2025 于洋 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
+  <footer class="tb-footer">
+    <div class="tb-wrap">
+      <p>© 2025 于洋小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
     </div>
   </footer>
 
