--- a/cart.html
+++ b/cart.html
@@ -3,53 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>购物车 - 于洋 小店</title>
+  <title>购物车 - 于洋小店</title>
   <link rel="stylesheet" href="css/blog.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="site-topbar">
-    <div class="wrap">
-      <a href="index.html" class="site-logo">于洋 小店</a>
-      <div class="topbar-right">
-        <div class="topbar-search">
-          <input type="text" placeholder="搜索商品" />
-          <button type="button" class="btn-search" onclick="location.href='products.html'">搜索</button>
-        </div>
-        <a href="cart.html" class="topbar-cart">
-          购物车
-          <span class="badge js-cart-count">0</span>
-        </a>
+  <div class="tb-top-util">
+    <div class="tb-wrap">
+      <span class="tb-welcome">欢迎来到于洋小店</span>
+      <div class="tb-util-links">
+        <a href="index.html">首页</a>
+        <a href="products.html">全部商品</a>
+        <a href="cart.html">购物车</a>
+        <a href="about.html">关于我们</a>
       </div>
     </div>
   </div>
 
-  <header class="site-header">
-    <div class="wrap">
-      <nav class="site-nav">
-        <a href="index.html">首页</a>
-        <a href="products.html">全部商品</a>
-        <a href="cart.html" aria-current="page">购物车</a>
-        <a href="about.html">关于我们</a>
-      </nav>
+  <header class="tb-header">
+    <div class="tb-wrap tb-header-inner">
+      <a href="index.html" class="tb-logo">于洋小店</a>
+      <div class="tb-search">
+        <input type="text" placeholder="搜索商品" />
+        <button type="button" class="tb-search-btn" onclick="location.href='products.html'">搜索</button>
+      </div>
+      <a href="cart.html" class="tb-cart">
+        购物车
+        <span class="tb-cart-badge js-cart-count">0</span>
+      </a>
     </div>
   </header>
 
-  <main class="main wrap">
-    <span class="section-title">购物车</span>
-    <div id="cartContent"></div>
-    <div class="totals card" id="cartTotals" style="max-width: 360px; margin-top: 16px; display: none;"></div>
-    <p style="margin-top: 16px;">
-      <a href="checkout.html" class="btn btn-primary" id="btnCheckout" style="display: none;">去结算</a>
-      <a href="products.html" class="btn">继续购物</a>
-    </p>
+  <nav class="tb-nav">
+    <div class="tb-wrap">
+      <a href="index.html" class="tb-nav-item">首页</a>
+      <a href="products.html" class="tb-nav-item">全部商品</a>
+      <a href="cart.html" class="tb-nav-item" aria-current="page">购物车</a>
+      <a href="about.html" class="tb-nav-item">关于我们</a>
+    </div>
+  </nav>
+
+  <main class="tb-main">
+    <section class="tb-content">
+      <div class="tb-wrap">
+        <h3 class="tb-section-title">购物车</h3>
+        <div id="cartContent"></div>
+        <div class="totals card" id="cartTotals" style="max-width: 360px; margin-top: 16px; display: none;"></div>
+        <p style="margin-top: 16px;">
+          <a href="checkout.html" class="btn btn-primary" id="btnCheckout" style="display: none;">去结算</a>
+          <a href="products.html" class="btn">继续购物</a>
+        </p>
+      </div>
+    </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <p>© 2025 于洋 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
+  <footer class="tb-footer">
+    <div class="tb-wrap">
+      <p>© 2025 于洋小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
     </div>
   </footer>
 
