--- a/checkout.html
+++ b/checkout.html
@@ -3,76 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>结算 - 于洋 小店</title>
+  <title>结算 - 于洋小店</title>
   <link rel="stylesheet" href="css/blog.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="site-topbar">
-    <div class="wrap">
-      <a href="index.html" class="site-logo">于洋 小店</a>
-      <div class="topbar-right">
-        <div class="topbar-search">
-          <input type="text" placeholder="搜索商品" />
-          <button type="button" class="btn-search" onclick="location.href='products.html'">搜索</button>
-        </div>
-        <a href="cart.html" class="topbar-cart">
-          购物车
-          <span class="badge js-cart-count">0</span>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <header class="site-header">
-    <div class="wrap">
-      <nav class="site-nav">
+  <div class="tb-top-util">
+    <div class="tb-wrap">
+      <span class="tb-welcome">欢迎来到于洋小店</span>
+      <div class="tb-util-links">
         <a href="index.html">首页</a>
         <a href="products.html">全部商品</a>
         <a href="cart.html">购物车</a>
         <a href="about.html">关于我们</a>
-      </nav>
+      </div>
+    </div>
+  </div>
+
+  <header class="tb-header">
+    <div class="tb-wrap tb-header-inner">
+      <a href="index.html" class="tb-logo">于洋小店</a>
+      <div class="tb-search">
+        <input type="text" placeholder="搜索商品" />
+        <button type="button" class="tb-search-btn" onclick="location.href='products.html'">搜索</button>
+      </div>
+      <a href="cart.html" class="tb-cart">
+        购物车
+        <span class="tb-cart-badge js-cart-count">0</span>
+      </a>
     </div>
   </header>
 
-  <main class="main wrap">
-    <span class="section-title">填写订单</span>
-    <div id="checkoutEmpty" style="display: none;">
-      <p class="empty">购物车是空的，请先 <a href="products.html">添加商品</a> 或 <a href="cart.html">查看购物车</a>。</p>
+  <nav class="tb-nav">
+    <div class="tb-wrap">
+      <a href="index.html" class="tb-nav-item">首页</a>
+      <a href="products.html" class="tb-nav-item">全部商品</a>
+      <a href="cart.html" class="tb-nav-item">购物车</a>
+      <a href="about.html" class="tb-nav-item">关于我们</a>
     </div>
-    <div id="checkoutForm" class="split" style="display: none;">
-      <div class="card">
-        <h3 style="margin: 0 0 16px; font-size: 16px;">收货信息</h3>
-        <div class="field" style="margin-bottom: 16px;">
-          <label>姓名</label>
-          <input type="text" id="name" class="input" placeholder="收货人姓名" required>
+  </nav>
+
+  <main class="tb-main">
+    <section class="tb-content">
+      <div class="tb-wrap">
+        <h3 class="tb-section-title">填写订单</h3>
+        <div id="checkoutEmpty" style="display: none;">
+          <p class="empty">购物车是空的，请先 <a href="products.html">添加商品</a> 或 <a href="cart.html">查看购物车</a>。</p>
         </div>
-        <div class="field" style="margin-bottom: 16px;">
-          <label>电话</label>
-          <input type="tel" id="phone" class="input" placeholder="手机号" required>
-        </div>
-        <div class="field" style="margin-bottom: 16px;">
-          <label>地址</label>
-          <textarea id="address" class="input" rows="3" placeholder="省市区 + 详细地址" required></textarea>
-        </div>
-        <div class="field">
-          <label>备注</label>
-          <textarea id="note" class="input" rows="2" placeholder="选填"></textarea>
+        <div id="checkoutForm" class="split" style="display: none;">
+          <div class="card">
+            <h3 style="margin: 0 0 16px; font-size: 16px;">收货信息</h3>
+            <div class="field" style="margin-bottom: 16px;">
+              <label>姓名</label>
+              <input type="text" id="name" class="input" placeholder="收货人姓名" required>
+            </div>
+            <div class="field" style="margin-bottom: 16px;">
+              <label>电话</label>
+              <input type="tel" id="phone" class="input" placeholder="手机号" required>
+            </div>
+            <div class="field" style="margin-bottom: 16px;">
+              <label>地址</label>
+              <textarea id="address" class="input" rows="3" placeholder="省市区 + 详细地址" required></textarea>
+            </div>
+            <div class="field">
+              <label>备注</label>
+              <textarea id="note" class="input" rows="2" placeholder="选填"></textarea>
+            </div>
+          </div>
+          <div>
+            <div class="card" id="orderSummary"></div>
+            <p class="hint" style="margin-top: 12px;">本站为静态演示，提交后会将订单信息复制到剪贴板，你可通过微信/邮件等方式发给我们完成下单。</p>
+            <button type="button" class="btn btn-primary" id="btnSubmit" style="margin-top: 16px;">提交订单（复制信息）</button>
+          </div>
         </div>
       </div>
-      <div>
-        <div class="card" id="orderSummary"></div>
-        <p class="hint" style="margin-top: 12px;">本站为静态演示，提交后会将订单信息复制到剪贴板，你可通过微信/邮件等方式发给我们完成下单。</p>
-        <button type="button" class="btn btn-primary" id="btnSubmit" style="margin-top: 16px;">提交订单（复制信息）</button>
-      </div>
-    </div>
+    </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <p>© 2025 于洋 小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
+  <footer class="tb-footer">
+    <div class="tb-wrap">
+      <p>© 2025 于洋小店 · 托管于 <a href="https://pages.github.com/">GitHub Pages</a></p>
     </div>
   </footer>
 
@@ -112,7 +124,7 @@
           alert('请填写姓名、电话和地址');
           return;
         }
-        var text = '【于洋 小店 订单】\n\n收货人：' + name + '\n电话：' + phone + '\n地址：' + address + (note ? '\n备注：' + note : '') + '\n\n' + lines.join('\n') + '\n\n合计：¥' + totalMoney;
+        var text = '【于洋小店 订单】\n\n收货人：' + name + '\n电话：' + phone + '\n地址：' + address + (note ? '\n备注：' + note : '') + '\n\n' + lines.join('\n') + '\n\n合计：¥' + totalMoney;
         if (navigator.clipboard && navigator.clipboard.writeText) {
           navigator.clipboard.writeText(text).then(function () {
             alert('订单信息已复制到剪贴板，请通过微信/邮件发给我们。感谢购买！');
